[package]
name = "scrp"
version = "0.0.0"
description = "A wrapper for Soundcloud that adds Discord Rich Presence support."
authors = ["dxxxxy"]
license = "GPL-3"
repository = "https://github.com/dxxxxy/scrp"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
lazy_static = "1.4.0"
discord-rich-presence = "0.2.3"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
